# CyborgBot_BE

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.backend.old  Makefile  README.md  bot_log_1.txt  bot_log_2.txt  bot_log_3.txt  docker-compose.dev.yml  docker-compose.yml  init-letsencrypt.sh  mypy.ini  persona_scores.json  pyproject.toml
certbot/conf/archive/nebrasalfadeelah.com/: cert1.pem  fullchain1.pem  privkey1.pem
certbot/conf/renewal/: nebrasalfadeelah.com.conf
core/: forms.py
core/core/: admin.py  helpers.py  models.py  serializers.py  views.py
core/core/utils/: collections.py  excel_import.py  misc.py  settings.py
core/project/: asgi.py  urls.py
core/project/settings/: __init__.py  base.py  custom.py  djoser.py  docker.py  envvars.py  logging.py  rest_framework.py  spectacular.py
core/reports/: admin.py  models.py  serializers.py  urls.py  views.py
core/templates/admin/: import_excel.html
core/trading_bot/: admin.py  apps.py  bot_logic.py  brain.py  consumers.py  controller.py  council.py  database.py  dxy_service.py  history_manager.py  manager.py  models.py  navigator.py  scraper.py  serializers.py  services.py  urls.py  views.py
core/trading_bot/migrations/: 0001_initial.py  0002_rename_current_price_tradeposition_close_price_and_more.py  0003_tradeposition_market_snapshot_tradeposition_voters.py  0004_tradeposition_sl_tradeposition_tp.py
core/trading_bot/personas/: analyst.py  base.py  reckless.py  wise.py
core/users/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  utils.py  views.py
core/users/migrations/: 0001_initial.py
nginx/: default.conf
scripts/: entrypoint.sh  entrypoint_no_migrate.sh  entrypoint_no_migrations.sh
(+8 files in other folders)
